--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     padding-top: 6rem;
     background-image: url(img/bg.jpg);
     background-size: cover;
+    background-attachment: fixed;
 }
 
 #about {
