--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
     background-image: url(img/bg.jpg);
     background-size: cover;
     background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
 #about {
