--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
+    background-position: 0px,-100px;
 }
 
 #about {
